# ExpertAgent

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  mcp.json  pyproject.toml
.cursor/: mcp.json
.opencode/: mcp.json.example
.opencode/plans/: 2026-07-10-comprehensive-agent-improvement.md  2026-07-11-mcp-config-auto-connect.md
.task_outputs/tool-results/: test_id_long.txt
.tasks/: task_1783688755_0513.json  task_1783688755_0757.json  task_1783688755_5254.json  task_1783688755_7281.json  task_1783688755_8734.json
.transcripts/: transcript_1783686419.jsonl
.zcode/plans/: plan-sess_d7b350eb-8aee-4195-b0a2-164a9037cf8e.md
src/coding_agent/: .env.example  ___init__.py  __main__.py  cli.py  config.py
src/coding_agent/codebase/: __init__.py  indexer.py  search.py
src/coding_agent/core/: __init__.py  agent.py  background.py  compaction.py  cron.py  hooks.py  loop.py  memory.py  recovery.py  session.py
src/coding_agent/llm/: anthropic_provider.py  base.py  litellm_provider.py  openai_provider.py  router.py  streaming.py
src/coding_agent/permissions/: __init__.py  policy.py
src/coding_agent/sandbox/: __init__.py  base.py  docker.py  e2b.py  local.py
src/coding_agent/skills/: __init__.py  frontmatter.py  registry.py  tool.py
src/coding_agent/storage/: __init__.py  cache.py  history.py
src/coding_agent/tasks/: __init__.py  graph.py  models.py  store.py  tools.py
src/coding_agent/teams/: __init__.py  bus.py  coordinator.py  protocol.py  teammate.py  worktree.py
src/coding_agent/tools/: __init__.py  base.py  bash.py  compact_tool.py  cron_tools.py  (+12 more)
tests/e2e/: __init__.py
tests/integration/: test_registry.py
tests/unit/: test_agent_mcp.py  test_anthropic_provider.py  test_background.py  test_cli_mcp.py  test_codebase.py  test_compaction.py  test_cron.py  test_hooks.py  test_mcp_config.py  test_mcp_pool.py  test_memory.py  test_recovery.py  test_sandbox_e2b.py  test_skills.py  test_tasks.py  test_teammate.py  test_teams_bus.py  test_teams_protocol.py  test_tools.py  test_utils.py  test_worktree.py
(+14 files in other folders)
