[project]
name = "coding-agent"
version = "0.1.0"
description = "一个受 Claude Code 启发的基于 Python 的编码智能体"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "您的名字", email = "you@example.com" }]
keywords = ["agent", "llm", "coding", "ai", "cli", "智能体", "编码"]

dependencies = [
    # === LLM 调用层 ===
    "openai>=1.50.0",
    "anthropic>=0.39.0",
    "litellm>=1.50.0",
    "tiktoken>=0.7.0",
    # === Agent 编排 / 数据校验 ===
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "instructor>=1.4.0",
    # === 代码理解 / 搜索 ===
    "tree-sitter>=0.23.0",
    "tree-sitter-languages>=1.2.0",
    "ripgrepy>=2.2.0",
    # === 文件 / Git ===
    "aiofiles>=24.1.0",
    "watchdog>=5.0.0",
    "gitpython>=3.1.0",
    # === 终端 UI ===
    "rich>=13.8.0",
    "textual>=0.82.0",
    "prompt-toolkit>=3.0.0",
    "typer>=0.12.0",
    # === 异步 / 网络 ===
    "httpx>=0.27.0",
    "anyio>=4.4.0",
    # === 持久化 ===
    "sqlmodel>=0.0.22",
    # === 可观测性 ===
    "loguru>=0.7.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]
sandbox = [
    "docker>=7.1.0",
    "e2b-code-interpreter>=1.0.0",
]

[project.scripts]
coding-agent = "coding_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coding_agent"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --cov=coding_agent --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
